Refactor and enhance Phase 2 results interface and accessibility
- Update package.json to streamline linting and formatting commands.
- Refactor type imports in phase2_actions.ts for improved clarity.
- Enhance integration tests in phase2_integration.test.ts with explicit failure messages for better debugging.
- Implement new scoring logic in generateScoringGrid to prioritize closest parans.
- Add accessibility checklist and performance utilities to ensure compliance with WCAG 2.1 standards.
- Introduce synchronization state management in ResultsTabs for improved user experience across components.
- Update styles for accessibility, including focus indicators and reduced motion preferences.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --check .",
-    "format:fix": "prettier --write .",
+    "lint": "eslint . --fix",
+    "format": "prettier --write .",
     "check": "prettier --write . && eslint . --fix",
     "typecheck": "tsc --noEmit"
   },
