--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "check": "prettier --write . && eslint . --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "format:ci": "prettier --check .",
+    "lint:ci": "eslint . --max-warnings 0",
+    "check:ci": "bun run format:ci && bun run lint:ci"
   },
   "dependencies": {
     "@auth/core": "0.41.1",
