Enhance Phase 2 calculations and improve accessibility features
- Update package.json to include type checking in CI commands.
- Refactor error handling in phase2_actions.ts for better context in error messages.
- Add validation for non-negative planet weights in calculatePhase2Complete.
- Implement checks for positive orb values in geospatial scoring functions.
- Skip performance tests on CI to account for timing variability.
- Introduce new utility functions for transforming backend data to globe layer format.
- Enhance the EnhancedGlobeSection component for better integration of Phase 2 data.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck": "tsc --noEmit",
     "format:ci": "prettier --check .",
     "lint:ci": "eslint . --max-warnings 0",
-    "check:ci": "bun run format:ci && bun run lint:ci"
+    "check:ci": "bun run format:ci && bun run lint:ci && bun run typecheck"
   },
   "dependencies": {
     "@auth/core": "0.41.1",
