Update TypeScript configuration, enhance geospatial scoring, and improve component performance
- Change TypeScript library target from ES2021 to ESNext for better compatibility.
- Correct longitude validation in phase2_integration.test.ts to ensure values are within the correct range.
- Add validation for latitude and longitude step values in generateScoringGrid to prevent negative or non-finite values.
- Optimize scoring grid calculations by hoisting latitude-only computations outside the inner loop.
- Memoize data transformations in EnhancedGlobeSection to improve performance during re-renders.
- Update accessibility checks in useResultsState to ensure proper highlighting behavior.
- Refactor imports in ZenithTab for clarity and consistency.

--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -14,7 +14,7 @@
 
     /* These compiler options are required by Convex */
     "target": "ESNext",
-    "lib": ["ES2021", "dom"],
+    "lib": ["ESNext", "dom"],
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "isolatedModules": true,
