Add Sonner for Toast Notifications and Refactor Components
- Added the `sonner` library for toast notifications to enhance user feedback across the application.
- Integrated toast notifications in the `CalculatorContent` and `DashboardPage` components for success and error messages.
- Refactored the `SaveChartModal` component to streamline the save functionality and improve user experience.
- Updated the `FloatingDataPanel` and `PlanetWeights` components to utilize centralized planet data for better maintainability.
- Enhanced documentation in the architecture overview to reflect recent changes and component structures.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nitro": "npm:nitro-nightly@latest",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "sweph-wasm": "^2.6.9",
     "tailwind-merge": "^3.4.0",
