--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@convex-dev/auth": "^0.0.90",
     "@convex-dev/react-query": "0.1.0",
     "@faker-js/faker": "^10.2.0",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.13.10",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/match-sorter-utils": "^8.19.4",
