--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@auth/core": "0.41.1",
+    "@convex-dev/action-cache": "^0.3.0",
     "@convex-dev/auth": "^0.0.90",
     "@convex-dev/react-query": "0.1.0",
     "@faker-js/faker": "^10.2.0",
@@ -33,13 +34,13 @@
     "@tanstack/react-devtools": "^0.7.11",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-devtools": "^5.91.2",
-    "@tanstack/react-router": "^1.157.2",
-    "@tanstack/react-router-devtools": "^1.157.2",
-    "@tanstack/react-router-ssr-query": "^1.157.2",
-    "@tanstack/react-start": "^1.157.2",
+    "@tanstack/react-router": "^1.157.16",
+    "@tanstack/react-router-devtools": "^1.157.16",
+    "@tanstack/react-router-ssr-query": "^1.157.16",
+    "@tanstack/react-start": "^1.157.16",
     "@tanstack/react-store": "^0.8.0",
     "@tanstack/react-table": "^8.21.3",
-    "@tanstack/router-plugin": "^1.157.2",
+    "@tanstack/router-plugin": "^1.157.16",
     "@tanstack/store": "^0.8.0",
     "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.8.1",
@@ -51,11 +52,11 @@
     "convex": "^1.31.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "framer-motion": "^12.29.0",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.561.0",
     "nitro": "npm:nitro-nightly@latest",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "sweph-wasm": "^2.6.9",
@@ -65,7 +66,8 @@
     "three-globe": "^2.45.0",
     "tw-animate-css": "^1.4.0",
     "vite-tsconfig-paths": "^6.0.5",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@convex-dev/eslint-plugin": "^1.1.1",
