--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@convex-dev/auth": "^0.0.90",
     "@convex-dev/react-query": "0.1.0",
     "@faker-js/faker": "^10.2.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
